# wasm-rust-demo

./: Cargo.toml  README.md  index.html
src/: lib.rs
web/: digest.d.ts  digest.js  digest_bg.wasm  digest_bg.wasm.d.ts  index.html
